--- a/foodkart/templates/dine/vendor_details.html
+++ b/foodkart/templates/dine/vendor_details.html
@@ -60,15 +60,22 @@
                   <h4 class="mb-1 me-1">₹{{product.price}}</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
-                  <button class="btn btn-warning btn-sm" type="button">Add to Cart</button>
+                  <div class="col"> 
+                    <div class="input-group input-spinner">
+                      <div class="input-group-prepend">
+                        <a href="#" class="btn btn-warning decrease_cart" data-id="{{ product.id }}" data-url="{% url 'decrease_cart' product.id %}"><i class="fa fa-minus"></i></a>
+                      </div>
+                      <label style="margin-left: 30px;" id="qty-{{product.id}}">0</label>
+                      <div class="input-group-append">
+                        <a href="#" class="btn btn-warning add_to_cart" data-id="{{ product.id }}" data-url="{% url 'add_to_cart' product.id %}" style="margin-left: 30px;"><i class="fa fa-plus"></i></a>
+                      </div>
+                    </div> <!-- input-group.// -->
+                  </div>
+                 
                   <button class="btn btn-success btn-sm mt-2" type="button">Add to wishlist</button>
                 </div>
-                <div class="price-holder">
-                  <span class="price">€Price</span>
-                  <a href="#" class="decrease_cart" data-id="#" data-url="#"><i class="icon-minus text-color"></i></a> <!--style="margin-right: 28px;"><-->
-                  <label id="qty-{{food.id}}">0</label>
-                  <a href="#" class="add_to_cart" data-id="#" data-url="#"><i class="icon-plus text-color"></i></a>
-              </div>
+                
+                
               </div>              
             </div>
             
@@ -78,6 +85,19 @@
     </div> 
     {% endfor %}   
   </div>
+  {% for item in cart_items  %}
+  <span id="qty-{{item.product.id}}" class="item_qty d-none" data-qty="{{item.quantity}}">{{item.quantity}}</span>
+
+  {% endfor %}
+  {% endblock content %}
+ 
+
+{% block script %}
+<!--CUSTOM APP JS-->
+<script src="{% static 'js/custom/appcustom.js' %}"></script>
+<!--SWEET ALERT JS-->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+{% endblock script %}
 </section>
 
-{% endblock content %}
