--- a/foodkart/templates/foody/base.html
+++ b/foodkart/templates/foody/base.html
@@ -51,6 +51,9 @@
       </style>  
 {% comment %} ======================================================================================== {% endcomment %}
 
+<!---->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 <!-- jQuery -->
 <script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
 
@@ -121,7 +124,7 @@ $(document).ready(function() {
                                         <ul id="navigation">
                                             <!-- <li><a href="index.html">Home</a></li>
                                             <li><a href="Catagori.html">Catagori</a></li> -->
-                                            <li class=""><a href="#">Work With Us</a>
+                                            <li class=""><a style="text-decoration: None;"  href="#">Work With Us</a>
                                                 <ul class="submenu">
                                                     <li><a href="{% url 'vendor_register' %}"> Be a Vendor</a></li>
                                                     <li><a href="#"> Delivery Jobs</a></li>
@@ -179,11 +182,12 @@ $(document).ready(function() {
 
                                     {% endif %}
                                  
-
+                                    {% if user.is_authenticated %}
                                     <a href="#" class="widget-header pl-3 ml-3">
                                         <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                                        <span class="badge badge-pill badge-danger notify">0</span>
+                                        <span class="badge badge-pill badge-danger notify" id="cart_counter">{{ cart_count }}</span>
                                     </a>
+                                    {% endif %}
                                     <div class="widget-header ml-5">
                                         {% comment %} <small class="title text-muted">Welcome guest!</small> {% endcomment %}
                                         <div> 
@@ -250,7 +254,10 @@ $(document).ready(function() {
  
 
     <!-- JS here -->
-
+    <!--CUSTOM APP-->
+    {% block script %}
+    
+    {% endblock script %}
     <!-- All JS Custom Plugins Link Here here -->
     <script src="{% static 'js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <!-- Jquery, Popper, Bootstrap -->
