--- a/foodkart/templates/foody/base.html
+++ b/foodkart/templates/foody/base.html
@@ -70,7 +70,8 @@
 
 <!-- custom javascript -->
 <script src="js/script.js" type="text/javascript"></script>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+{% comment %} 
 <script type="text/javascript">
 /// some script
 
@@ -80,7 +81,7 @@ $(document).ready(function() {
 
 }); 
 // jquery end
-</script>
+</script> {% endcomment %}
 
 {% comment %} ================================================================================================= {% endcomment %}
 </head>
@@ -183,7 +184,7 @@ $(document).ready(function() {
                                     {% endif %}
                                  
                                     {% if user.is_authenticated %}
-                                    <a href="#" class="widget-header pl-3 ml-3">
+                                    <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
                                         <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
                                         <span class="badge badge-pill badge-danger notify" id="cart_counter">{{ cart_count }}</span>
                                     </a>
