--- a/foodkart/templates/foody/base.html
+++ b/foodkart/templates/foody/base.html
@@ -187,6 +187,10 @@
                                             <a class="btn btn-danger btn-sm" href="{% url 'hotel_list' %}">Dine</a> <span class="dark-transp"> </span>
                                             {% comment %} <a href="{% url 'signin' %}"> Sign in</a> {% endcomment %}
                                         </div>
+                                        <div> 
+                                            <a class="btn btn-success btn-sm" href="{% url 'cart' %}">cart</a> <span class="dark-transp"> </span>
+                                            {% comment %} <a href="{% url 'signin' %}"> Sign in</a> {% endcomment %}
+                                        </div>
                                     </div>
 
                                 </div> <!-- widgets-wrap.// -->
