--- a/foodkart/templates/accounts/signin.html
+++ b/foodkart/templates/accounts/signin.html
@@ -6,7 +6,7 @@
   <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
-{% if request.GET.command == 'verification' %}
+{% comment %} {% if request.GET.command == 'verification' %}
 
 <div class="container mx-auto alert alert-info" style="max-width: 1024px; margin-top:100px;">
   Thankyou for registering with us. We have sent a verification email to [{{request.GET.email}}] Please verify it.
@@ -14,7 +14,7 @@
   Already verified? <a href="{% url 'signin' %}">Login</a>
 </div>
 
-{% else %}
+{% else %} {% endcomment %}
   <!-- ============================ COMPONENT LOGIN   ================================= -->
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
         <div class="card-body">
@@ -28,7 +28,9 @@
             <div class="form-group">
         <input type="password" class="form-control" placeholder="Password" name="password">
             </div> <!-- form-group// -->
-            
+            {% if request.GET.next %}
+            <input type="hidden" name="next" value="{{request.GET.next}}">
+            {% endif %}
             <div class="form-group">
               <a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a> 
              
@@ -44,7 +46,7 @@
        <br><br>
   <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
   
-  {% endif %}
+  {% comment %} {% endif %} {% endcomment %}
   </section>
 
  
